--- a/my-portfolio/.gitignore
+++ b/my-portfolio/.gitignore
@@ -17,11 +17,11 @@ build/
 # ===============================
 # Environment variables
 # ===============================
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+#.env
+#.env.local
+#.env.development.local
+#.env.test.local
+#.env.production.local
 
 # ===============================
 # Logs
@@ -61,5 +61,4 @@ coverage/
 .vercel
 .cache/
 .tmp/
-public/images/skills/
-public/images/tools/
+
